Basic functionality of page nav bar complete, still has some issues with jumping to final page that need to be fixed

--- a/invoicefe2/src/css/PageList.css
+++ b/invoicefe2/src/css/PageList.css
@@ -13,3 +13,8 @@ button.final-page {
     background-color: slategrey;
     border-radius: 2px 15px 15px 2px;
 }
+
+button.first-page {
+    background-color: slategrey;
+    border-radius: 15px 2px 2px 15px;
+}
